<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.CadastroJogoActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/can"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/in_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_alignParentStart="@+id/logo"
            android:layout_alignParentLeft="@+id/logo"
            android:layout_marginTop="30dp"
            android:hint="@string/selecione_uma_data"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_date"
            style="@style/RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/in_date"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:padding="10dp"
            android:text="@string/data_da_partida" />

        <EditText
            android:id="@+id/in_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/selecione_o_horario"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_time"
            style="@style/RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:padding="10dp"
            android:text="@string/hor_rio_do_jogo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_nome_clube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_time"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/input_name_clube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_clube_mandante"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_nome_clube_visitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_nome_clube"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/input_name_clube_visitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_clube_visitante"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_local_partida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_nome_clube_visitante"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/input_loca_partida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/local_do_jogo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_local_partida"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:spinnerMode="dropdown" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cadastrar_jogo"
            style="@style/RaisedButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categorias"
            android:layout_alignStart="@+id/categorias"
            android:layout_alignLeft="@+id/categorias"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cadastrar_jogo" />
    </RelativeLayout>

</ScrollView>