<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.HistoriaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_clube"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/can"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/historia"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/historia_conteudo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/historia_conteudo"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/formacao_clube"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:src="@drawable/fb_img_1572280053988"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historia_conteudo_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/historia_conteudo_2"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/formacao_clube_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:src="@drawable/fb_img_1572279974224"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historia_conteudo_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/historia_conteudo_2"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/estadio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:src="@drawable/fb_img_1572280028438"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historia_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>